<resources>
    <string name="app_name">NASA_POD</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в вики</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="settings">settings</string>
    <string name="favourite">favourite</string>
    <string name="search">search</string>
    <string name="on_1_screen">На экран 1</string>
    <string name="on_2_screen">На экран 2</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="choose_theme_text">Choose theme setting</string>
    <string name="main_theme_text">Main theme</string>
    <string name="red_theme_text">Red theme</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="tab_text_earth">Earth</string>
    <string name="tab_text_mars">Mars</string>
    <string name="tab_text_weather">Weather</string>
    <string name="navigation_three">Рекуклер</string>
    <string name="loading">Loading…</string>
</resources>