<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BurlyWood"
    tools:context=".settings.SettingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margintop_settings_fragment"
        android:text="@string/choose_theme_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/rb_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_settings_fragment"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toBottomOf="@id/tv_settings">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/main_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_theme_text" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/red_theme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/red_theme_text" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ok_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_button"
        app:layout_constraintStart_toStartOf="@id/tv_settings"
        app:layout_constraintTop_toBottomOf="@id/rb_group" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_button_settings_fragment"
        android:text="@string/cancel_button"
        app:layout_constraintStart_toEndOf="@id/ok_button"
        app:layout_constraintTop_toTopOf="@id/ok_button" />

</androidx.constraintlayout.widget.ConstraintLayout>